@@ -19,6 +19,7 @@ use MooseX::Types::Moose                ( ':all', );
 use MooseX::Types::Path::Tiny           ( 'File', );
 use ELF::Extract::Sections::Meta::Types ( ':all', );
 use Module::Runtime                     ( 'require_module', );
+use MooseX::Params::Validate            (qw( validated_list pos_validated_list ));
 
 require ELF::Extract::Sections::Section;
 
@@ -102,47 +103,13 @@ The Size of the section.
 
 =cut
 
-sub _argument {
-    my ( $args, $number, $type, %flags ) = @_;
-    return if not $flags{required} and @{$args} < $number + 1;
-    my $can_coerce = $flags{coerce} ? '(coerceable)' : q[];
-
-    @{$args} >= $number + 1 or croak "Argument $number of type $type$can_coerce was not specified";
-
-    if ( not $flags{coerce} ) {
-        $type->check( $args->[$number] ) and return $args->[$number];
-    }
-    else {
-        my $value = $type->coerce( $args->[$number] );
-        return $value if $value;
-    }
-    return croak "Argument $number was not of type $type$can_coerce: " . $type->get_message( $args->[$number] );
-
-}
-
-sub _parameter {
-    my ( $args, $name, $type, %flags ) = @_;
-    return if not $flags{required} and not exists $args->{$name};
-    my $can_coerce = $flags{coerce} ? '(coerceable)' : q[];
-    exists $args->{$name} or croak "Parameter '$name' of type $type$can_coerce was not specified";
-
-    if ( not $flags{coerce} ) {
-        $type->check( $args->{$name} ) and return delete $args->{$name};
-    }
-    else {
-        my $value = $type->coerce( delete $args->{$name} );
-        return $value if $value;
-    }
-    return croak "Parameter '$name' was not of type $type$can_coerce: " . $type->get_message( $args->{$name} );
-}
-
 sub sorted_sections {
-    my ( $self, %args ) = @_;
-    my $field      = _parameter( \%args, 'field',      FilterField, required => 0 );
-    my $descending = _parameter( \%args, 'descending', Bool,        required => 0 );
-    if ( keys %args ) {
-        croak "Unknown parameters @{[ keys %args ]}";
-    }
+    my ( $self,  @args )       = @_;
+    my ( $field, $descending ) = validated_list(
+        \@args,
+        'field'      => { isa => FilterField, optional => 1 },
+        'descending' => { isa => Bool,        optional => 1 },
+    );
     my $m = 1;
     $m = 0 - 1 if ($descending);
     return [ sort { $m * ( $a->compare( other => $b, field => $field ) ) } values %{ $self->sections } ];
@@ -168,10 +135,12 @@ no Moose;
 
 sub _error_scanner_missing {
     my ( $self, @args ) = @_;
-    @args < 4 or croak 'Too many arguments';
-    my $scanner = _argument( \@args, 0, Str, required => 1 );
-    my $package = _argument( \@args, 1, Str, required => 1 );
-    my $error   = _argument( \@args, 2, Str, required => 1 );
+    my ( $scanner, $package, $error ) = pos_validated_list(
+        \@args,
+        { isa => Str, },    #
+        { isa => Str, },    #
+        { isa => Str, },    #
+    );
     my $message = sprintf qq[The Scanner %s could not be found as %s\n.], $scanner, $package;
     $message .= '>' . $error;
     $self->log->logconfess($message);
@@ -196,11 +165,12 @@ sub _build__scanner_instance {
 
 sub _warn_stash_collision {
     my ( $self, @args ) = @_;
-    @args < 4 or croak 'Too many arguments';
-    my $stashname = _argument( \@args, 0, Str, required => 1 );
-    my $header    = _argument( \@args, 1, Str, required => 1 );
-    my $offset    = _argument( \@args, 2, Str, required => 1 );
-
+    my ( $stashname, $header, $offset ) = pos_validated_list(
+        \@args,
+        { isa => Str, },    #
+        { isa => Str, },
+        { isa => Str, },
+    );
     my $message = q[Warning, duplicate file offset reported by scanner.];
     $message .= sprintf q[<%s> and <%s> collide at <%s>.], $stashname, $header, $offset;
     $message .= sprintf q[Assuming <%s> is empty and replacing it.], $stashname;
@@ -210,11 +180,12 @@ sub _warn_stash_collision {
 
 sub _stash_record {
     my ( $self, @args ) = @_;
-    @args < 4 or croak 'Too many arguments';
-    my $stash  = _argument( \@args, 0, HashRef, required => 1 );
-    my $header = _argument( \@args, 1, Str,     required => 1 );
-    my $offset = _argument( \@args, 2, Str,     required => 1 );
-
+    my ( $stash, $header, $offset ) = pos_validated_list(
+        \@args,
+        { isa => HashRef, },    #
+        { isa => Str, },
+        { isa => Str, },
+    );
     if ( exists $stash->{$offset} ) {
         $self->_warn_stash_collision( $stash->{$offset}, $header, $offset );
     }
@@ -224,12 +195,13 @@ sub _stash_record {
 
 sub _build_section_section {
     my ( $self, @args ) = @_;
-    @args < 5 or croak 'Too many arguments';
-    my $stashName = _argument( \@args, 0, Str,  required => 1 );
-    my $start     = _argument( \@args, 1, Int,  required => 1 );
-    my $stop      = _argument( \@args, 2, Int,  required => 1 );
-    my $file      = _argument( \@args, 3, File, required => 1 );
-
+    my ( $stashName, $start, $stop, $file ) = pos_validated_list(
+        \@args,
+        { isa => Str,  required => 1 },
+        { isa => Int,  required => 1 },
+        { isa => Int,  required => 1 },
+        { isa => File, required => 1 },
+    );
     $self->log->info(" Section ${stashName} , ${start} -> ${stop} ");
     return ELF::Extract::Sections::Section->new(
         offset => $start,
@@ -241,8 +213,10 @@ sub _build_section_section {
 
 sub _build_section_table {
     my ( $self, @args ) = @_;
-    @args < 2 or croak 'Too many arguments';
-    my $ob        = _argument( \@args, 0, HashRef, required => 1 );
+    my ($ob) = pos_validated_list(
+        \@args,    #
+        { isa => HashRef },
+    );
     my %datastash = ();
     my @k         = sort { $a <=> $b } keys %{$ob};
     my $i         = 0;
