@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.000001
+ [Added / runtime requires]
+ - MooseX::Params::Validate
 
 1.000000 2015-07-30T16:49:16Z
  [Added / configure requires]
