@@ -1,6 +1,8 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.000001
+ [Added / runtime requires]
+ - MooseX::Params::Validate
 
 1.000000 2015-07-30T16:49:16Z
  [Added / configure recommends]
